2009-01-15 TualatriX <tualatrix@gmail.com>

	* pulog/views/tag.py: Separated the tag view form post.py, so in the
	future can do more thing.
	* pulog/models.py,templatetags/utils.py,
	templates/favourites/favourite_detail.html: Make the Comment common
	for object, and open the Comment for Favourite. Remove the
	enable_comment field.

2009-01-14 TualatriX <tualatrix@gmail.com>

	* pulog/models.py, utls.py, views/favourites.py, templates/favourites:
	the previous version of Favourite.
	* pulog/models.py, managers.py: Fixed the bug caused the duplicated
	tag(for slug). Override the get_or_create of TagManager.

2009-01-13 TualatriX <tualatrix@gmail.com>

	* pulog/feed.py: Use the date__lte=datetime.datetime.now()

2009-01-11 TualatriX <tualatrix@gmail.com>

	* demo-site/static/img/favicon.ico, pulog/templates/base.html: Added
	the favicon.

2009-01-10 TualatriX <tualatrix@gmail.com>

	* pulog/templates/post/title.html
	pulog/templates/comment/comment.html: Use comment_count instead of
	get_comment_count.
	* pulog/views/post.py, urls.py: Added the view of tag.
	* pulog/templatetags/sidebar.py: Changed the latest items from 10 to 20.  

2009-01-09 TualatriX <tualatrix@gmail.com>

	* pulog/feed.py: Set the latest feed item to 10.
	* pulog/urls.py, views/utils.py: Set the Redirect from /feed/ /rss to
	/feed/latest/.
	* pulog/urls.py, templates/robots.txt, views/utils.py: Added the view of
	robots.txt

2009-01-08 TualatriX <tualatrix@gmail.com>

	* pulog/models.py, signals.py: Added the comment_count and related
	signal to Post model.
	* pulog/templates/post/title.html, comment/comment.html: Show comment
	count.

2009-01-03 TualatriX <tualatrix@gmail.com>

	* pulog/urls.py: Added the sitemap.

2009-01-02 TualatriX <tualatrix@gmail.com>

	* pulog/templates/base.html: Fixed the div error of sidebar and
	contain.

2009-01-01 TualatriX <tualatrix@gmail.com>

	* pulog/utils.py, pulog/models.py: Merged the tagging.

2008-12-31 TualatriX <tualatrix@gmail.com>
